subscribe form footer

--- a/css/style.css
+++ b/css/style.css
@@ -601,6 +601,10 @@ address div {
   display: flex;
 } */
 
+.social-ico-footer {
+  /* background-color: #fff; */
+}
+
 .social-ico-footer > h3 {
   font-weight: 700;
   font-size: 14px;
@@ -704,4 +708,68 @@ address div {
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms, visibility 250ms;
+}
+
+/* ----------- Subscribe form footer */
+.subscribe-footer {
+  /* background-color: #fff;
+  width: 200px;
+  height: 50px; */
+  margin-left: 93px;
+}
+
+.subscribe-footer > h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 0.88;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--item-off);
+  margin-bottom: 20px;
+  margin-top: 12px;
+}
+
+.subscribe-input {
+  border: none;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  outline: none;
+
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  /* transition: border-color 300ms linear; */
+}
+
+.subscribe-bt {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--item-off);
+  background-color: var(--item-on);
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  min-width: 200px;
+  min-height: 50px;
+  border: 1px solid var(--item-on);
+  border-radius: 4px;
+  margin-left: 12px;
+}
+
+.subscribe-bt-ico {
+  fill: var(--item-off);
+}
+.form-send {
+  display: flex;
 }
