--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,22 @@ section {
   padding-right: 15px;
 }
 
-/* ------- Скрыть H1 ------- */
+/* ------- Скрыть H1 др. элементы------- */
 .title-hiden {
   display: none;
 }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 /* ------- Работа со ссылками ------- */
 .link {
   text-decoration: none;
@@ -214,6 +226,11 @@ section {
   border: 1px solid var(--item-on);
   border-radius: 4px;
 }
+
+.button-hero:hover {
+  background-color: #188ce8;
+}
+
 .hero {
   display: flexbox;
 }
@@ -601,9 +618,8 @@ address div {
   display: flex;
 } */
 
-.social-ico-footer {
-  /* background-color: #fff; */
-}
+/* .social-ico-footer {
+} */
 
 .social-ico-footer > h3 {
   font-weight: 700;
@@ -674,23 +690,27 @@ address div {
 }
 
 .modal {
-  width: 500px;
-  min-height: 600px;
-  background-color: #fff;
-  border-radius: 5px;
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--item-off);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
   position: absolute;
   top: 27%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* transform: scale(1); */
   transition: transform 1250px;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-bt {
   width: 30px;
   height: 30px;
   background-color: transparent;
-  border: 1px solid var(--social-ico);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: flex;
   position: absolute;
@@ -698,17 +718,183 @@ address div {
   right: 10px;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 }
 
-/* .modal-bt-ico {
-} */
+.modal-bt-ico:hover {
+  fill: var(--item-on);
+  cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .is-hidden {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms, visibility 250ms;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-form-area {
+  padding: 40px;
+}
+
+/* .modal-form {
+} */
+
+.modal-label {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--text-main);
+  display: block;
+}
+
+.modal-heder {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-color);
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  width: 448px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: var(--item-on);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--item-on);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text {
+  resize: none;
+  height: 120px;
+  padding: 12px 16px;
+  font-size: 100%;
+  line-height: 1.15;
+  letter-spacing: 0.01em;
+}
+
+.modal-check {
+  margin-right: 8px;
+}
+
+.modal-agree {
+  width: 16px;
+  height: 15px;
+}
+
+.modal-agree-link {
+  color: var(--item-on);
+}
+
+.modal-text-check {
+  font-size: 14px;
+  line-height: 1.72;
+  letter-spacing: 0.03em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-text-check::before {
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-color);
+  border-radius: 2px;
+  margin-right: 8px;
+}
+
+.modal-check:checked + .modal-text-check::before {
+  background-image: url(../img/ico/check_on.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: none;
+}
+
+.modal-agree-link {
+  margin-left: 3px;
+}
+
+.modal-agree-line {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+/* .modal-bt-send {
+} */
+
+.bt-send {
+  display: block;
+  margin: 0 auto;
+}
+
+.modal-button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--item-off);
+  background-color: var(--item-on);
+  cursor: pointer;
+  min-width: 200px;
+  min-height: 50px;
+  border: 1px solid var(--item-on);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.modal-button:hover {
+  background-color: #188ce8;
+}
+
+.modal-fild {
+  margin-bottom: 10px;
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+
+.modal-label {
+  margin-bottom: 4px;
+}
+
+/* 
+check_square
+check_on 
+*/
 
 /* ---- Subscribe form footer */
 .subscribe-footer {
@@ -743,7 +929,6 @@ address div {
   align-items: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-  /* transition: border-color 300ms linear; */
 }
 
 .subscribe-bt {
@@ -769,11 +954,20 @@ address div {
   justify-content: center;
 }
 
+.subscribe-bt:hover {
+  background-color: #188ce8;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .subscribe-bt-ico {
   fill: var(--item-off);
   margin-left: 10px;
 }
 
 .form-send {
+  display: flex;
+}
+
+.form-subscribe {
   display: flex;
 }
