--- a/css/style.css
+++ b/css/style.css
@@ -719,9 +719,10 @@ address div {
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
-.modal-bt-ico:hover {
+.modal-bt:hover .modal-bt-ico {
   fill: var(--item-on);
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -736,7 +737,7 @@ address div {
 }
 
 .modal-form-area {
-  padding: 40px;
+  padding: 40px 40px 0 40px;
 }
 
 /* .modal-form {
@@ -839,12 +840,13 @@ address div {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   margin-top: 20px;
 }
 
-/* .modal-bt-send {
-} */
+.modal-bt-send {
+  margin-top: 30px;
+}
 
 .bt-send {
   display: block;
@@ -872,7 +874,7 @@ address div {
   background-color: #188ce8;
 }
 
-.modal-fild {
+.modal-fild:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -898,7 +900,7 @@ check_on
 
 /* ---- Subscribe form footer */
 .subscribe-footer {
-  margin-left: 93px;
+  margin-left: auto;
 }
 
 .subscribe-footer > h3 {
@@ -922,7 +924,6 @@ check_on
   border-radius: 4px;
   background-color: transparent;
   outline: none;
-
   padding-left: 16px;
   font-size: 16px;
   line-height: 1.25;
@@ -947,8 +948,6 @@ check_on
   border: 1px solid var(--item-on);
   border-radius: 4px;
   margin-left: 12px;
-  /* padding: 10px 28px 10px 28px; */
-  /* box-sizing: border-box; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -962,10 +961,6 @@ check_on
 .subscribe-bt-ico {
   fill: var(--item-off);
   margin-left: 10px;
-}
-
-.form-send {
-  display: flex;
 }
 
 .form-subscribe {
